# cornell-tilde-infra

./: .dockerignore  .gitignore  .gitmodules  Containerfile  Dockerfile  README.md  SETUP.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-integration.yml  validate-deployment.yaml
cli/: cli.zsh  main.py  pyproject.toml
deploy/: apply-runtime.sh  common.sh  configure-ssh.sh  post-deploy.sh  setup.sh
deploy/container/: setup-container.sh
deploy/container/systemd/: setup-in-container.service
documentation/: APPLICATION_AND_ACCOUNT_FLOW.md  DATABASE_AND_DIRECTORY.md  OPERATIONS.md  SETUP.md  SYSTEM_OVERVIEW.md  USER_COMMAND_LINE.md
fast-api-server/: app.py
fast-api-server/services/: jwt.py
opt/cornell-tilde/lib/: pyproject.toml
opt/cornell-tilde/lib/cornell_tilde/: __init__.py  commander.py  config.py  db.py  pyproject.toml
opt/cornell-tilde/lib/cornell_tilde/src/cornell_tilde/: __init__.py  auth.py  config.py  db.py
opt/cornell-tilde/migrations/: 1_user-applications_initial-schema.sql  2_directory_modified_hooks.sql
opt/cornell-tilde/systemd/: cornell-tilde-directory.path  cornell-tilde-directory.service
opt/cornell-tilde/templates/: directory.html  user_homepage.html
site/var/www/html/: index.html
site/var/www/html/errors/: 403.html  404.html
site/var/www/html/ssh/: index.html
tests/: ci_integration.sh
tools/: install-python-path.py  setup-python-env.sh
var/www/html/: index.html
var/www/html/assets/: style.css
var/www/html/errors/: 403.html  404.html
var/www/html/ssh/: index.html
