[project]
name = "cornell-tilde-infra"
version = "0.1.0"
description = "Infrastructure scripts and shared Python utilities for tilde@Cornell."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "opt/cornell-tilde/lib"}

[tool.setuptools.packages.find]
where = ["opt/cornell-tilde/lib"]
