[project]
name = "cornell-tilde-infra"
version = "0.1.0"
description = "Workspace for Cornell Tilde services and libraries"
requires-python = ">=3.11"
dependencies = [
    "commander",
    "cornell_tilde",
    "dotenv>=0.9.9",
]

[tool.uv.workspace]
members = [
    "opt/cornell-tilde/lib/*",
]

[tool.uv.sources]
commander = { workspace = true, editable = true }
cornell_tilde = { workspace = true, editable = true }
