[project]
name = "cornell_tilde_cli"
version = "0.1.0"
description = "CLI"
authors = []
dependencies = [
    "cornell_tilde-infra",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
cornell_tilde-infra = { path = "../opt/cornell-tilde/lib", editable = true }